--- a/DFD.html
+++ b/DFD.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="DFD.css">
     <link rel="stylesheet" href="arenas.css">
     <link rel="stylesheet" href="CONTACTO2.css">
+    <link rel="stylesheet" href="MOVIL.css">
 </head>
 <body>
     <header class="header">
