--- a/CONTACTO.html
+++ b/CONTACTO.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="arenas.css">
     <link rel="stylesheet" href="CONTACTO2.css">
     <link rel="stylesheet" href="contacto3.css">
+    <link rel="stylesheet" href="MOVIL.css">
 </head>
 <body>
     <header class="header">
