--- a/EJERCICIOS.html
+++ b/EJERCICIOS.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="style.CSS">
     <link rel="stylesheet" href="arenas.css">
     <link rel="stylesheet" href="CONTACTO2.css">
-    <link rel="stylesheet" href="FONDO.css">
-    <link rel="stylesheet" href="otro.css">
+    <link rel="stylesheet" href="MOVIL.css">
 </head>
 <body>
     <header class="header">
